<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_horizontal_small_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_small_margin"
    android:orientation="vertical">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="0">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/due_date"/>

            <TextView
                android:id="@+id/due_date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/buy_price"/>

            <TextView
                android:id="@+id/buy_price_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/sell_price"/>

            <TextView
                android:id="@+id/sell_price_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"/>
        </TableRow>

    </TableLayout>

</LinearLayout>