<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_horizontal_small_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_small_margin"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/solid_circle_bg"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="TP"
        android:textColor="@color/material_white_1000"
        android:textSize="26dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small1"
        android:shrinkColumns="0">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_small4"
                android:layout_marginRight="@dimen/margin_small4"
                android:layout_weight="1.5"
                android:text="@string/title"
                android:textAlignment="textEnd"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8.5"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_small4"
                android:layout_marginRight="@dimen/margin_small4"
                android:layout_weight="1.5"
                android:text="@string/value"
                android:textAlignment="textEnd"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/value_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8.5" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_small4"
                android:layout_marginRight="@dimen/margin_small4"
                android:layout_weight="1.5"
                android:text="@string/date"
                android:textAlignment="textEnd"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/last_update_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8.5" />
        </TableRow>

    </TableLayout>

</LinearLayout>